tests/snapshots/yaml_suite_snapshots__yaml_suite_HMQ5_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 6.23. Node Properties
  from: "http://www.yaml.org/spec/1.2/spec.html#id2783940"
  tags: spec tag alias
  yaml: "!!str &a1 \"foo\":\n  !!str bar\n&a2 baz : *a1\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL &a1 <tag:yaml.org,2002:str> \"foo\n   =VAL <tag:yaml.org,2002:str> :bar\n   =VAL &a2 :baz\n   =ALI *a1\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\": \"bar\",\n  \"baz\": \"foo\"\n}\n"
  dump: "&a1 !!str \"foo\": !!str bar\n&a2 baz: *a1\n"
