tests/snapshots/yaml_suite_snapshots__yaml_suite_HRE5_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Double quoted scalar with escaped single quote
  from: "https://github.com/yaml/libyaml/issues/68"
  tags: double error single
  fail: true
  yaml: "---\ndouble: \"quoted \\' scalar\"\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :double\n"
