tests/snapshots/yaml_suite_snapshots__yaml_suite_HS5T_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 7.12. Plain Lines
  from: "http://www.yaml.org/spec/1.2/spec.html#id2789986"
  tags: spec scalar whitespace upto-1.2
  yaml: "1st non-empty\n\n 2nd non-empty␣\n———»3rd non-empty\n"
  tree: "+STR\n +DOC\n  =VAL :1st non-empty\\n2nd non-empty 3rd non-empty\n -DOC\n-STR\n"
  json: "\"1st non-empty\\n2nd non-empty 3rd non-empty\"\n"
  dump: "'1st non-empty\n\n  2nd non-empty 3rd non-empty'\n"
