tests/snapshots/yaml_suite_snapshots__yaml_suite_HU3P_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid Mapping in plain scalar
  from: "https://gist.github.com/anonymous/d305fd8e54cfe7a484088c91a8a2e533 via @ingydotnet"
  tags: error mapping scalar
  fail: true
  yaml: "key:\n  word1 word2\n  no: key\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n"
